--- a/Ejercicio08/index.html
+++ b/Ejercicio08/index.html
@@ -13,6 +13,7 @@
     <body>
         <div id="general">
             <header id="cabecera">
+                <img style="float: left;" src=".\img\carita.png" alt="">
                 <h1>Página Web Personal</h1>
                 <p>Desarrollo web, posicionamiento SEO y nuevas tecnologías</p>
             </header>
@@ -41,6 +42,9 @@
                             interesa la seguridad como si no, deberías
                             preocuparte. Te explico de qué va el tema, por qué
                             debes preocuparte...</p>
+                        <footer id="pie">
+                            <p>Seguridad . 10/abril/2014 . 4 comentarios</p>
+                        </footer>
                     </article>
                 </section>
 
@@ -59,13 +63,13 @@
                     </header>
                     <div id="curso_online">
                         <h3>Curso online</h3>
+                        <div>
+                            <img src=".\img\html5.png" alt="">
+                        </div>
                     </div>
                 </aside>
             </div>
 
-            <footer id="pie">
-
-            </footer>
         </div>
     </body>
 
