--- a/BOOSTRAP_PRUEBAS/startbootstrap-business-casual-1.0.4/about.html
+++ b/BOOSTRAP_PRUEBAS/startbootstrap-business-casual-1.0.4/about.html
@@ -32,8 +32,8 @@
 
 <body>
 
-    <div class="brand">Business Casual</div>
-    <div class="address-bar">3481 Melrose Place | Beverly Hills, CA 90210 | 123.456.7890</div>
+    <div class="brand">Título de prueba</div>
+    <div class="address-bar">IES Hermanos Machado | Dos Hermanas</div>
 
     <!-- Navigation -->
     <nav class="navbar navbar-default" role="navigation">
@@ -53,7 +53,7 @@
             <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
                 <ul class="nav navbar-nav">
                     <li>
-                        <a href="index.html">Home</a>
+                        <a href="index.html">Inicio</a>
                     </li>
                     <li>
                         <a href="about.html">About</a>
@@ -62,7 +62,7 @@
                         <a href="blog.html">Blog</a>
                     </li>
                     <li>
-                        <a href="contact.html">Contact</a>
+                        <a href="contact.html">Contacto</a>
                     </li>
                 </ul>
             </div>
@@ -83,7 +83,7 @@
                     <hr>
                 </div>
                 <div class="col-md-6">
-                    <img class="img-responsive img-border-left" src="img/slide-2.jpg" alt="">
+                    <img class="img-responsive img-border-left" src="img/halo_wars.jpg" alt="">
                 </div>
                 <div class="col-md-6">
                     <p>This is a great place to introduce your company or project and describe what you do.</p>
@@ -98,25 +98,25 @@
             <div class="box">
                 <div class="col-lg-12">
                     <hr>
-                    <h2 class="intro-text text-center">Our
-                        <strong>Team</strong>
+                    <h2 class="intro-text text-center">Algunos
+                        <strong>Calvos</strong>
                     </h2>
                     <hr>
                 </div>
                 <div class="col-sm-4 text-center">
-                    <img class="img-responsive" src="http://placehold.it/750x450" alt="">
+                    <img class="img-responsive" src="img/saitama_1.jpg" alt="">
                     <h3>John Smith
                         <small>Job Title</small>
                     </h3>
                 </div>
                 <div class="col-sm-4 text-center">
-                    <img class="img-responsive" src="http://placehold.it/750x450" alt="">
+                    <img class="img-responsive" src="img/DON_LIMPIO.png" alt="">
                     <h3>John Smith
                         <small>Job Title</small>
                     </h3>
                 </div>
                 <div class="col-sm-4 text-center">
-                    <img class="img-responsive" src="http://placehold.it/750x450" alt="">
+                    <img class="img-responsive" src="img/thanos.jpg" alt="">
                     <h3>John Smith
                         <small>Job Title</small>
                     </h3>
