--- a/BOOSTRAP_PRUEBAS/startbootstrap-business-casual-1.0.4/blog.html
+++ b/BOOSTRAP_PRUEBAS/startbootstrap-business-casual-1.0.4/blog.html
@@ -32,8 +32,8 @@
 
 <body>
 
-    <div class="brand">Business Casual</div>
-    <div class="address-bar">3481 Melrose Place | Beverly Hills, CA 90210 | 123.456.7890</div>
+    <div class="brand">Título de prueba</div>
+    <div class="address-bar">IES Hermanos Machado | Dos Hermanas</div>
 
     <!-- Navigation -->
     <nav class="navbar navbar-default" role="navigation">
@@ -53,7 +53,7 @@
             <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
                 <ul class="nav navbar-nav">
                     <li>
-                        <a href="index.html">Home</a>
+                        <a href="index.html">Inicio</a>
                     </li>
                     <li>
                         <a href="about.html">About</a>
@@ -62,7 +62,7 @@
                         <a href="blog.html">Blog</a>
                     </li>
                     <li>
-                        <a href="contact.html">Contact</a>
+                        <a href="contact.html">Contacto</a>
                     </li>
                 </ul>
             </div>
