--- a/ABURRIMIENTO/example.html
+++ b/ABURRIMIENTO/example.html
@@ -8,12 +8,9 @@
     <link rel="stylesheet" type="text/css" media="screen" href="estilos.css">
 </head>
 <body>
-    <div class="cuadrado"></div>
-    <div class="cuadrado"></div>
-    <div class="cuadrado"></div>
-    <div class="cuadrado"></div>
+    <div class="caja_audio">
+        <audio src="audio.mp3" controls>Si ve usteh este mensaje, su navegador no soporta la reproducción de audio.</audio>
+    </div>
 
-    <img src="" alt="">
-    
 </body>
 </html>
