--- a/ABURRIMIENTO/example.html
+++ b/ABURRIMIENTO/example.html
@@ -9,7 +9,7 @@
 </head>
 <body>
     <div class="caja_audio">
-        <audio src="audio.mp3" controls>Si ve usteh este mensaje, su navegador no soporta la reproducción de audio.</audio>
+        <audio src="audio.mp3" autoplay controls>Si ve usteh este mensaje, su navegador no soporta la reproducción de audio.</audio>
     </div>
 
 </body>
