--- a/PHP/BD/index.html
+++ b/PHP/BD/index.html
@@ -10,22 +10,17 @@
         <link rel="stylesheet" href="css/bootstrap.min.css">
         <link rel="stylesheet" href="css/estilos.css">
 
-        <title>Principal</title>
+        <title>Inicio</title>
     </head>
     <body>
         <div class="container">
-            <form action="datos.php" method="POST">
-                <h2>Email</h2>
-
+            <form action="consulta">
                 <table>
                     <tr>
-                        <td><label for="email">Email: </label></td>
-                        <td><input type="email" name="email" id="email"></td>
+                        <td></td>
+                        <td></td>
                     </tr>
                 </table>
-                <br/>
-                <input class="btn btn-info" type="submit" value="Buscar">
-
             </form>
         </div>
 
