--- a/PHP/Ejercicio23/index.html
+++ b/PHP/Ejercicio23/index.html
@@ -42,7 +42,7 @@
                     </table>
                 </div>
 
-                <div class="buscar">
+                <div class="submit">
                     <input class="btn btn-primary btn-lg active" type="submit" value="Buscar">
                 </div>
             </form>
